02-traefik-services.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: traefik

spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: traefik

spec:
  type: LoadBalancer
  # loadBalancerIP must be in range of WSL's IP
  loadBalancerIP: 192.168.75.1
  # to get the ip simply use ifconfig eth0
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000 # Optional; Kubernetes will assign a port if not specified
  selector:
    app: traefik
